# trial

./: camel.yaml  main.py  package.json  pyproject.toml
.github/workflows/: manual.yml
src/: app.js  test.sh
trial/.github/workflows/: main.yml  push-pr.yml
