[project]
name = "blockchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitcoinlib>=0.7.9",
    "ecdsa>=0.19.2",
    "eth-account>=0.13.7",
    "flask>=3.1.3",
    "ipykernel>=7.3.0",
    "jupytext>=1.19.4",
    "py-solc-x>=2.0.5",
    "solana>=0.39.0",
    "web3>=7.16.0",
    "yahoofinance>=0.0.2",
    "yfinance>=1.4.1",
]
